crates/sdk/macros/tests/ui/validator_each_regex_non_string_fail.rs
use nebula_macros::Validator;

#[derive(Validator)]
struct InvalidEachRegexNonString {
    #[validate(each(regex = r"^\\d+$"))]
    ids: Vec<u64>,
}

fn main() {}